syntax = "proto3";

option go_package= "./proto";

package greet_service;

service GreetService {
    rpc SayHello(Empty) returns (HelloResponse);

    rpc SayHelloServerStream(NamesList) returns (stream HelloResponse);

    rpc SayHelloClientStream(stream HelloRequest) returns (MessageList);

    rpc SayHelloBidirectionalStream(stream HelloRequest) returns (stream HelloResponse);
}

message Empty {};

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

message NamesList {
    repeated string names = 1;
}

message MessageList {
    repeated string message = 1;
}